Fix autolayout warnings

--- a/IPSX/Flows/Marketplace/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Market.storyboard
@@ -454,11 +454,11 @@
                                         </constraints>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="d6I-l5-47A">
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CartCollectionHeader" id="d6I-l5-47A">
                                     <rect key="frame" x="0.0" y="0.0" width="69" height="122"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </collectionReusableView>
-                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Pgr-aX-N0A">
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CartCollectionFooter" id="Pgr-aX-N0A">
                                     <rect key="frame" x="345" y="0.0" width="69" height="122"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </collectionReusableView>
