display real data in details screen + reorganize

--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -693,7 +693,15 @@
                         <outlet property="cartOverlayView" destination="qoK-WY-LS5" id="jEE-e9-DyK"/>
                         <outlet property="cartOverlayYConstraint" destination="Yuj-3c-5Yw" id="cwP-1x-te4"/>
                         <outlet property="collectionView" destination="91H-v7-tup" id="mWJ-QK-wYE"/>
+                        <outlet property="countryLabel" destination="iaD-KF-yzr" id="GKv-i2-8np"/>
+                        <outlet property="durationLabel" destination="e5n-iy-Llb" id="Z8X-ai-L6b"/>
+                        <outlet property="flagImageView" destination="N49-i0-cE3" id="BWO-j1-lqT"/>
+                        <outlet property="noOfProxiesLabel" destination="tF8-MN-aOu" id="gWO-9t-mu1"/>
+                        <outlet property="offerTypeLabel" destination="eOX-gz-RoA" id="i4F-RC-vap"/>
+                        <outlet property="priceIPSXLabel" destination="F2F-C1-dgj" id="t3q-RL-jen"/>
+                        <outlet property="progressLabel" destination="Tzx-L0-Bi5" id="fKD-ts-kHJ"/>
                         <outlet property="progressView" destination="czV-6Q-iFg" id="1Tb-Xi-5O0"/>
+                        <outlet property="trafficLabel" destination="SJK-rl-7mb" id="ynP-iZ-Nug"/>
                         <segue destination="i3b-eM-f4N" kind="show" identifier="ViewCartSegueID" id="6eO-CG-Oxt"/>
                     </connections>
                 </viewController>
