--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
                                                 <rect key="frame" x="0.0" y="-1" width="100" height="45"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <connections>
-                                                    <segue destination="ggr-gu-M0i" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="f1S-eT-YU2"/>
+                                                    <segue destination="ggr-gu-M0i" kind="presentation" identifier="FiltersSegueID" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="f1S-eT-YU2"/>
                                                 </connections>
                                             </button>
                                         </subviews>
