Update for filters

--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -2499,6 +2499,10 @@ maximum 5 minutes after purchase!</string>
                                                                     <constraint firstItem="pVg-hq-Jdi" firstAttribute="top" secondItem="Avc-M1-Ez5" secondAttribute="top" id="yUS-po-ied"/>
                                                                 </constraints>
                                                                 <connections>
+                                                                    <outlet property="buttonR1C1" destination="XWK-Ls-h4F" id="cpM-jj-nDb"/>
+                                                                    <outlet property="buttonR1C2" destination="gbz-h1-YU6" id="jrQ-4t-NCi"/>
+                                                                    <outlet property="buttonR2C1" destination="dV5-hC-nev" id="hFf-OE-OvN"/>
+                                                                    <outlet property="buttonR2C2" destination="yw5-Uy-0CO" id="YWi-qb-rSn"/>
                                                                     <outlet property="imageR1C1" destination="TvW-bW-RRW" id="nYR-8S-3ju"/>
                                                                     <outlet property="imageR1C2" destination="ZsL-xD-vc4" id="bKG-Pi-CcP"/>
                                                                     <outlet property="imageR2C1" destination="DyL-we-ZgP" id="eTL-jy-DD9"/>
