--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -528,6 +528,9 @@
                         <outlet property="countryOverlayView" destination="2Xs-5a-Py6" id="gfW-UH-P3j"/>
                         <outlet property="countryRComponent" destination="wMJ-Xf-01h" id="FOh-8I-ddh"/>
                         <outlet property="countryViewYAxiscenter" destination="HE6-z5-Mzh" id="AQd-Ra-T2f"/>
+                        <outlet property="filtersCounterLabel" destination="XfL-VT-vgL" id="2kR-21-6FI"/>
+                        <outlet property="filtersImage" destination="VaV-k4-vxl" id="p7e-BL-L06"/>
+                        <outlet property="filtersTitleLabel" destination="Dcz-ep-m10" id="G70-NZ-wyO"/>
                         <outlet property="loadingView" destination="9wh-bB-9UA" id="LZX-c2-Kwt"/>
                         <outlet property="separatorView" destination="gar-De-dh8" id="2iW-Cg-o47"/>
                         <outlet property="submitCountryButton" destination="vct-hk-qWt" id="dUB-mG-Q1p"/>
